complete login function

--- a/backend/src/assets/start.css
+++ b/backend/src/assets/start.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: neosans;
-    src: url("assets/font/UTM_Neo_Sans_IntelBold_Italic.ttf");
+    src: url("/assets/font/UTM_Neo_Sans_IntelBold_Italic.ttf");
 }
 
 * {
@@ -74,7 +74,7 @@
 }
 
 .body .content {
-    background: url('./assets/img/musicparty.png') top center / cover no-repeat;
+    background: url('/assets/img/musicparty.png') top center / cover no-repeat;
     display: flex;
     align-items: center;
     flex-direction: column;
