--- a/backend/src/resources/views/changepassword.hbs
+++ b/backend/src/resources/views/changepassword.hbs
@@ -10,7 +10,7 @@
         <style>
             @font-face {
             font-family: neosans;
-            src: url("../../assets/font/UTM_Neo_Sans_IntelBold_Italic.ttf");
+            src: url("/assets/font/UTM_Neo_Sans_IntelBold_Italic.ttf");
             } 
             *{
                 margin: 0;
