--- a/backend/src/resources/views/start.hbs
+++ b/backend/src/resources/views/start.hbs
@@ -10,7 +10,7 @@
     <div class="landing-page-layout">
         <div class="header_container">
             <div class="header-left">
-                <img src="assets/img/Logo_LTMCB_fix.png" alt="logo">
+                <img src="/assets/img/Logo_LTMCB_fix.png" alt="logo">
             </div>
             <div class="header-right">
                 <a href="login" class="btn-sign-in">
@@ -22,11 +22,11 @@
         </div>
         <div class="body">
             
-            <!-- <img src="assets/img/—Pngtree—cool music carnival music festival_852935.png" alt="" class="background-content"> -->
+            {{!-- <img src="/assets/img/musicparty.png" alt="" class="background-content">  --}}
             
             <div class="content">
                 <div class="body-content">
-                    <img src="assets/img/Logo_LTMCB_fix.png" alt="logo">
+                    <img src="/assets/img/Logo_LTMCB_fix.png" alt="logo">
                     <div class="spacer1" style="height: 12px;"></div>
                     <h1 class="start-page-headline">Explore the World</h1>
                     <div class="spacer1"></div>
@@ -63,7 +63,7 @@
                                 of New York to the beautiful beaches of Bali.
                             </div>
                         </div>
-                        <img src="assets/img/teaser-earth.png" alt="">
+                        <img src="/assets/img/teaser-earth.png" alt="">
                     </div>
                     <div class="teaser2">
                         <div class="content-teaser2">
@@ -79,7 +79,7 @@
                                 party and play together.
                             </div>
                         </div>
-                        <img src="assets/img/teaser-parties.png" alt="">
+                        <img src="/assets/img/teaser-parties.png" alt="">
                     </div>
                     <div class="teaser3">
                         <div class="content-teaser3">
@@ -95,7 +95,7 @@
                                 against others in tournaments and events!
                             </div>
                         </div>
-                        <img src="assets/img/teaser-compete.png" alt="">
+                        <img src="/assets/img/teaser-compete.png" alt="">
                     </div>
                 </div>
             </div>
