--- a/backend/src/assets/sign.css
+++ b/backend/src/assets/sign.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: neosans;
-    src: url("UTM_Neo_Sans_IntelBold_Italic.ttf");
+    src: url("../assets/font/UTM_Neo_Sans_IntelBold_Italic.ttf");
 } 
 *{
     margin: 0;
@@ -72,12 +72,29 @@ form.sign-up-form {
     transition: 0.5s ease-in-out;
     transition-delay: 1s;
 }
+
+.error-message {
+    color: white;
+    padding: 0 1em;
+    width: 70%;
+    height: 50px;
+    background: red;
+    margin: 10px 0;
+    border: 2px solid #df4adf;
+    border-radius: 50px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: center;
+}
+
 .title {
     font-size: 35px;
     color: #df4adf;
     margin-bottom: 10px;
 }
 .input-field {
+    padding: 0 1em;
     width: 100%;
     height: 50px;
     background: #f0f0f0;
@@ -86,6 +103,8 @@ form.sign-up-form {
     border-radius: 50px;
     display: flex;
     align-items: center;
+    flex-direction: row;
+    justify-content: center;
 }
 .input-field i {
     flex: 1;
@@ -103,6 +122,22 @@ form.sign-up-form {
     font-weight: 600;
     color: #444;
 }
+
+.input-field .input-container {
+    display: flex;
+    align-items: center;
+    
+}
+.sign-up-form span {
+    color: red;
+    font-size: 1em;
+}
+
+.sign-in-form span {
+    color: red;
+    font-size: 1em;
+}
+
 .btn {
     width: 150px;
     height: 50px;
@@ -174,6 +209,7 @@ a {
 .account-text {
     display: none;
 }
+
 /*Animation*/
 .container.sign-up-mode::before {
     transform: translateX(0);
