--- a/sign.css
+++ b/sign.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: neosans;
-    src: url("UTM_Neo_Sans_IntelBold_Italic.ttf");
+    src: url("../assets/font/UTM_Neo_Sans_IntelBold_Italic.ttf");
 } 
 *{
     margin: 0;
@@ -78,6 +78,7 @@ form.sign-up-form {
     margin-bottom: 10px;
 }
 .input-field {
+    padding: 0 1em;
     width: 100%;
     height: 50px;
     background: #f0f0f0;
@@ -86,6 +87,8 @@ form.sign-up-form {
     border-radius: 50px;
     display: flex;
     align-items: center;
+    flex-direction: column;
+    justify-content: center;
 }
 .input-field i {
     flex: 1;
@@ -102,6 +105,16 @@ form.sign-up-form {
     font-size: 18px;
     font-weight: 600;
     color: #444;
+}
+
+.input-field .input-container {
+    display: flex;
+    align-items: center;
+    
+}
+.sign-up-form span {
+    color: red;
+    font-size: 1em;
 }
 .btn {
     width: 150px;
