--- a/backend/src/resources/views/playsingle.hbs
+++ b/backend/src/resources/views/playsingle.hbs
@@ -136,6 +136,8 @@
             </div>
         </div>
         <input type="hidden" id="songsInput" data-songs="{{songs}}">
+        <input type="hidden" id="efVLInput" value="{{efVL}}">
+        <input type="hidden" id="msVLInput" value="{{msVL}}">
         <script src="playsingleplayer.js"></script>
     </body>
 </html>
