--- a/backend/src/resources/views/playmulti.hbs
+++ b/backend/src/resources/views/playmulti.hbs
@@ -146,6 +146,8 @@
             </div>
         </div>
         <input type="hidden" id="songsInput" data-songs="{{songs}}">
+        <input type="hidden" id="efVLInput" value="{{efVL}}">
+        <input type="hidden" id="msVLInput" value="{{msVL}}">
 
         <script src="playmultiplayer.js"></script>
     </body>
