--- a/backend/src/resources/views/profile.hbs
+++ b/backend/src/resources/views/profile.hbs
@@ -158,6 +158,7 @@
             </div>
         </div>
     </div>
+    <input type="hidden" id="vlInput" value="{{VL}}">
     <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
     <script src="/resources/views/profile.js"></script>
 </body>
