--- a/backend/src/assets/main.css
+++ b/backend/src/assets/main.css
@@ -44,7 +44,7 @@ body{
 }
 
 #header .logo >img {
-    width: 120%;
+    width: 100%;
     height: 150%;
 }
 #header .right_header{
@@ -1106,3 +1106,50 @@ table, th, tr{
     /* border-radius: 8px;
 }*/ 
 
+@media only screen and (max-height: 450px) {
+    #content .button .speaker {
+        width: 90%;
+        height: 90%;
+        margin-top: -10%;
+    }
+    #header {
+        height: 73px;
+    }
+    #content {
+        height: 70vh;
+    }
+    #content .button .girl {
+        margin-top: -38%;
+    }
+    #header .right_header {
+        gap: 5vh;
+    }
+    .select_rank_mode_body .search_room {
+        left: 38.7%;
+    }
+    .modal_thuong .Hell, .Heaven, .Waste_land {
+        width: 150px;
+        height: 150px;
+    }
+    #mode_no_hope {
+        left: -6vh;
+    }
+    #mode_hard {
+        left: -2vh;
+    }
+    .ldboardbody {
+        overflow-y: auto;
+        max-height: 95vh;
+        border-radius: 15px;
+    }
+    .leaderboard .rank {
+        border: 4px solid black;
+        margin: 5vh auto;
+    }
+    .ldheader {
+        margin: 3vh auto;
+    }
+    th {
+        padding: 10px 20px;
+    }
+}
