--- a/backend/src/resources/views/home.hbs
+++ b/backend/src/resources/views/home.hbs
@@ -116,7 +116,7 @@
             </div>
             <form action="/playsingle" method="get">
             <div class="select_normal_mode_radio">
-                <label  class="container">Khó
+                <label  class="container" id="mode_hard">Khó
                     <input type="radio"  name ="mode" value="hard" checked="checked" >
                     <span class="checkmark"></span>
                 </label>
@@ -126,7 +126,7 @@
                     <span class="checkmark"></span>
                 </label>
                 
-                <label class="container">Tuyệt vọng
+                <label class="container" id="mode_no_hope">Tuyệt vọng
                     <input type="radio" name ="mode" value="no hope">
                     <span class="checkmark"></span>
                 </label>
