--- a/backend/src/resources/views/home.hbs
+++ b/backend/src/resources/views/home.hbs
@@ -13,7 +13,7 @@
                 <div class="indexer" >
                     <div class="nav">
                         <p class = "username" id = "username">
-                            Duy
+                            {{username}}
                             <i class="nav-arrow-down fa-solid fa-angle-down" onclick="icon_arrow(this)"></i>
                         </p>
                         <div class="subnav" id = "subnav">
