edit ui responsive1

--- a/backend/src/resources/views/home.hbs
+++ b/backend/src/resources/views/home.hbs
@@ -85,7 +85,7 @@
                         <img src="/assets/img/Avatar_header.jpg" alt="Avatar" class="avatar">
                         <div class="information">
                             <div class="username">
-                                King_Of_Melody
+                                {{username}}
                             </div>
                             <div class="point_number">
                                 <div class="point">
@@ -183,7 +183,7 @@
                         <img src="/assets/img/Avatar_header.jpg" alt="Avatar" class="avatar">
                         <div class="information">
                             <div class="username">
-                                King_Of_Melody
+                                {{username}}
                             </div>
                             
                         </div>
@@ -231,7 +231,7 @@
                 </div>
 
                 <div class="select_rank_mode_center_right_rank">
-                    <img src="/assets/img/bronzerank.png" alt="" class="rank">
+                    <img src="/assets/img/Bronze.png" alt="" class="rank">
                 </div>
 
             </div>
